k8s-manifests/ingress/final-simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceeyit-final-working
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ceeyit-frontend-test
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ceeyit-backend-test
            port:
              number: 8080
      - path: /argocd-ui/
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
      - path: /grafana-ui/
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
      - path: /prometheus-ui/
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
