k8s-manifests/ingress/prometheus-fix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-direct-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /prometheus-ui(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
